--- a/assets/stylesheets/globals/_base.scss
+++ b/assets/stylesheets/globals/_base.scss
@@ -38,3 +38,10 @@ input[type="number"]::-webkit-outer-spin-button {
   display: none;
 }
 
+._hidden{
+	display:none;
+
+}
+._bodynew{
+	background:#fff;
+}
