Changes I have made

--- a/assets/stylesheets/main.scss
+++ b/assets/stylesheets/main.scss
@@ -10,6 +10,9 @@
 // Site wide variables
 @import "globals/_variables.scss";
 
+// Site Sprite Styles
+@import "globals/_sprites";
+
 // Header & Footer
 @import "sections/_header";
 @import "sections/_footer";
