--- a/assets/stylesheets/sections/_footer.scss
+++ b/assets/stylesheets/sections/_footer.scss
@@ -1,3 +1,20 @@
 footer._footer {
+width:300px;
 
+text-align:center;
+margin-top:20px;
+
+._footerlinks{
+width:300px;
+color:#fff;
+
+p{
+width:270px;
+text-align:center;
+margin:0 auto;
+font-size:13px;
+opacity:.8;
+font-weight:bold;
+}
+}
 }
