--- a/assets/stylesheets/pages/_home.scss
+++ b/assets/stylesheets/pages/_home.scss
@@ -1,23 +1,34 @@
 // Every page should have a class on the body
 // Scope that in each file at the start
 ._home {
-  
+
+ 
   ._category{
- > a, > div{
- color:#fff;  
 border-bottom: #000;
 border-top: 1px solid #000;
-@include background(linear-gradient(#9d02e2, #5a017f));
-background-position-x: right;
-display: block;
-font-size: 16px;
-line-height: 1;
-text-decoration: none;
-text-transform: capitalize;
-padding: 10px;
+@include background(linear-gradient(#9d02e2, #5a017f)); 
+color:#fff; 
+@include bar_inner_base;
 margin:0px !important;
+
+ > a{
+ position:relative;
+ @include bar_inner_base;
+
+ }
+ &[data-ur-toggler-component="button"]{ 
+  > div{
+   text-align:left;
+ position:relative;
+ @include bar_inner_base; 
+ ._icon_category {
+@include toggler_btn_icon;
+@extend .sprites-white-plus;
+}
+ }  
 }
 }
+
 ._subcategory{
 > a{
 font-weight:bold;
@@ -25,31 +36,36 @@ color:#fff;
 border-bottom: #000;
 border-top: 1px solid #000;
 background: #320047;
-background-position-x: right;
-display: block;
-font-size: 16px;
-line-height: 1;
-text-decoration: none;
-text-transform: capitalize;
-padding: 10px;
+@include bar_inner_base;
+position:relative;
+text-align:left;
+._icon_subcategory {
+@include toggler_btn_icon2;
+@extend .sprites-white-arrow-right;
+}
 }
 }
 
 ._categoryfooter {
-> a, >div{
 color:#fff;
 border-bottom: #000;
 border-top: 1px solid #000;
 @include background(linear-gradient(#5d5c58, #3a3937));
-background-position-x: right;
-display: block;
-font-size: 16px;
-line-height: 1;
-text-decoration: none;
-text-transform: capitalize;
-padding: 10px;
+@include bar_inner_base;
 margin:0px !important;
+> a{
+ position:relative;
+ @include bar_inner_base;
+} >div {
+text-align:left;
+ position:relative;
+ @include bar_inner_base;
+ ._icon_category {
+@include toggler_btn_icon;
+@extend .sprites-white-plus;
 }
+}
+
 }
 ._subcategoryfooter{
 > a{
@@ -58,13 +74,13 @@ color:#fff;
 border-bottom: #000;
 border-top: 1px solid #000;
 background: #320047;
-background-position-x: right;
-display: block;
-font-size: 16px;
-line-height: 1;
-text-decoration: none;
-text-transform: capitalize;
-padding: 10px;
+@include bar_inner_base;
+position:relative;
+text-align:left;
+._icon_subcategory {
+@include toggler_btn_icon2;
+@extend .sprites-white-arrow-right;
+}
 }
 }
 ._listhome{
@@ -76,5 +92,30 @@ margin:0px;
 ._navhome{
 margin:0px;
 cursor:pointer;
+padding:0px;
 }
+
+._banner_bar{
+width:300px;
+height:180px;
+position:relative;
+background-image:image-url("ls-bannerBg.jpg");
+background-repeat:no-repeat;
+
+._facebook_social{
+width:300px;
+height:51px;
+position:absolute;
+bottom:0px;
+
+._social{
+position:absolute;
+width:49px;
+right:6px;
+bottom:-2px;
+}
+}
+}
+
+
 }
