--- a/assets/stylesheets/sections/_header.scss
+++ b/assets/stylesheets/sections/_header.scss
@@ -1,28 +1,29 @@
 header#mw_header {
-  width:640px;
-  height:211px;
+  width:300px;
+  height:99px;
   position:relative;
   background-image:image-url("ls-header.jpg");
   
 ._icons_bar{
 position: absolute;
-top: 50px;
-right: 65px;
+top: 25px;
+right: 30px;
 opacity: .8;
 
 > div {
 display: inline-block;
 padding-top: 3px;
-margin-left:40px;
+margin-left:15px;
 }
 }
  
 .sprites-white-cart{
-height: 28px;
+height: 13px;
+
 } 
 
 .sprites-white-info{
-margin-left: 55px !important;
+margin-left: 20px !important;
 } 
 
 #mw_logo{
@@ -33,31 +34,38 @@ left:0px;
 
 ._search{
 position:absolute;
-bottom:25px;
+bottom:10px;
 text-align:center;
 
 >div{
 display:inline;
-margin-left: 20px;
+margin-left: 10px;
 .form-text{
-width:480px;
-height:40px;
-border-radius: 10px;
-text-align:center;
-font-size:24px;
+width:220px;
+height:20px;
+border-radius: 5px;
+text-align:left;
+font-size:14px;
+background:#9502d4;
+color:#da6afd;
+border-color:#000;
+border:none;
+padding-left:10px;
 }
 }
 .form-submit{
 color:#fff;
-width:80px;
-height:40px;
-border-radius: 10px;
+width:45px;
+height:25px;
+border-radius: 5px;
 @include background(linear-gradient(#9d02e2, #5a017f));
-font-size:24px;
+font-size:14px;
 text-transform:uppercase;
-margin-left:15px;
+margin-left:5px;
 cursor:pointer;
-border-color:#000;
+border:none;
+position:relative;
+bottom:-2px;
 }
 }
 
