--- a/assets/stylesheets/pages/_content.scss
+++ b/assets/stylesheets/pages/_content.scss
@@ -13,21 +13,50 @@ margin:0px !important;
 list-style:none !important;
 padding:0px;
 }
+
 ._topnav{
-> a{
+position:relative;
+
+> div{
+cursor:pointer;
 font-weight:bold;
 color:#fff;
+border-bottom: #000;
+border-top: 1px solid #000;
+@include background(linear-gradient(#9d02e2, #5a017f));
+@include bar_inner_base;
+position:relative;
+text-align:left;
+font-size:24px;
+}
+
+._icon_category {
+@include toggler_btn_icon3;
+@extend .sprites-white-plus;
+}
+
+._ditto{
+font-size:8px;
+color:#9401d5;
+font-weight:bold;
 border-bottom: #000;
 border-top: 1px solid #000;
 background: #320047;
 @include bar_inner_base;
 position:relative;
 text-align:left;
-font-size:24px;
-._icon_category {
-@include toggler_btn_icon3;
-@extend .sprites-white-plus;
+text-transform:uppercase;
+font-size:12px;
+> a {
+color:#9401d5;
+font-weight:bold;
 }
+
+._icon_subcategory {
+@include toggler_btn_icon2;
+@extend .sprites-white-arrow-right;
+}
+
 }
 }
 
@@ -47,19 +76,7 @@ font-size:24px;
 margin-bottom:5px;
 }
 }
-._ditto{
-font-size:8px;
-color:#9401d5;
-font-weight:bold;
-border-bottom: #000;
-border-top: 1px solid #000;
-background: #320047;
-@include bar_inner_base;
-position:relative;
-text-align:left;
-text-transform:uppercase;
-font-size:12px;
-}
+
 
 ._product_image {
 
@@ -127,6 +144,7 @@ margin-left:0px;
 }
 
 ._add_to_cart{
+padding:5px;
 
 > div {
 border-top:2px solid #000;
@@ -135,6 +153,50 @@ border-bottom:2px solid #000;
 .attributes{
 border-bottom:none;
 }
+}
+
+._get_low {
+text-align:left;
+padding:5px;
+
+> label{
+display:block;
+}
+
+> input{
+
+}
+}
+
+._get_down {
+text-align:left;
+padding:5px;
+
+> label{
+display:block;
+}
+
+> select{
+background:#000;
+color:#fff;
+width:150px;
+height:30px;
+font-weight:bold;
+}
+}
+
+._take_that{
+width:95%;
+height:50px;
+@include background(linear-gradient(#f7c935, #d6a105));
+@include bar_inner_base;
+font-size:24px;
+color:#666;
+margin:5px auto 0;
+padding:5px;
+border:none;
+text-transform:uppercase;
+cursor:pointer;
 }
 
 ._categoryfooter {
