--- a/assets/stylesheets/sections/_header.scss
+++ b/assets/stylesheets/sections/_header.scss
@@ -1,35 +1,79 @@
 header#mw_header {
-  width:300px;
   height:99px;
   position:relative;
-  background-image:image-url("ls-header.jpg");
+  background:#000;
+ margin-bottom:5px;
   
 ._icons_bar{
 position: absolute;
-top: 25px;
-right: 30px;
+top: 21px;
+left: 160px;
+background:#000;
 opacity: .8;
+border-radius:5px;
+border:#8301bd 1px solid;
+border-bottom:none;
+
+> span + span{
+border-left:#8301bd 1px solid;
+border-right:#8301bd 1px solid;
+position:relative;
+top:-5px;
+}
+
+> span {
+width: 25px;
+height: 22px;
+display: inline-block;
+padding:3px;
 
 > div {
 display: inline-block;
-padding-top: 3px;
-margin-left:15px;
+position:relative;
+top:3px;
+cursor:pointer;
 }
 }
- 
+} 
+
 .sprites-white-cart{
-height: 13px;
+
 
 } 
 
 .sprites-white-info{
-margin-left: 20px !important;
+
+
 } 
+
+.sprites-white-search{
+width:20px;
+height: 20px !important;
+}
+
+#mw_top{
+@include background(linear-gradient(#4d0b6c, #36074b)); 
+height:50px;
 
 #mw_logo{
 position:absolute;
 top:0px;
 left:0px;
+}
+}
+
+#mw_bottom{
+border-top:#8301bd 2px solid;
+border-bottom:#8301bd solid 2px;
+min-height:49px;
+
+
+> div{
+color:#fff;
+font-weight:bold;
+text-align:left;
+padding:5px;
+font-size:14px;
 }
 
 ._search{
@@ -37,11 +81,13 @@ position:absolute;
 bottom:10px;
 text-align:center;
 
->div{
+> div {
 display:inline;
 margin-left: 10px;
+
+
 .form-text{
-width:220px;
+width:190px;
 height:20px;
 border-radius: 5px;
 text-align:left;
@@ -50,12 +96,13 @@ background:#9502d4;
 color:#da6afd;
 border-color:#000;
 border:none;
-padding-left:10px;
+padding-left:5px;
 }
 }
+
 .form-submit{
 color:#fff;
-width:45px;
+width:40px;
 height:25px;
 border-radius: 5px;
 @include background(linear-gradient(#9d02e2, #5a017f));
@@ -66,6 +113,7 @@ cursor:pointer;
 border:none;
 position:relative;
 bottom:-2px;
+}
 }
 }
 
