--- a/assets/stylesheets/main.scss
+++ b/assets/stylesheets/main.scss
@@ -20,4 +20,6 @@
 // Pages
 @import "pages/_home";
 @import "pages/_category";
+@import "pages/_catalog";
 @import "pages/_content";
+@import "pages/_cart";
