--- a/assets/stylesheets/sections/_header.scss
+++ b/assets/stylesheets/sections/_header.scss
@@ -87,6 +87,10 @@ z-index:5;
 
 #mw_cart{
 position:relative;
+> a{
+color:#F2DD70;
+text-decoration:underline;
+}
 
 ._cart_tab{
 background:#000;
@@ -96,6 +100,7 @@ top:-5px;
 left:226px;
 z-index:5;
 }
+
 }
 
 #mw_bottom{
@@ -108,7 +113,7 @@ z-index:4;
 background:#000;
 border:1px solid #000;
 position:absolute;
-top:-5px;
+top:-3px;
 left:161px;
 z-index:5;
 }
@@ -144,6 +149,7 @@ border-color:#000;
 border:none;
 padding-left:5px;
 }
+
 }
 
 .form-submit{
@@ -159,7 +165,9 @@ cursor:pointer;
 border:none;
 position:relative;
 bottom:-2px;
+display:inline;
 }
+
 }
 }
 
