Changes I have made

--- a/assets/stylesheets/pages/_catalog.scss
+++ b/assets/stylesheets/pages/_catalog.scss
@@ -153,7 +153,7 @@ font-size:24px;
 
 .productbox{
 border-bottom:5px solid #000;
-min-height:150px;
+min-height:140px;
 padding:5px;
 position:relative;
 
@@ -180,8 +180,8 @@ min-height:150px;
 width:120px;
 
  a > img {
-height:70%;
-width:70%;
+height:140px;
+width:105px;
 float:left;
 }
  
