--- a/assets/stylesheets/pages/_home.scss
+++ b/assets/stylesheets/pages/_home.scss
@@ -112,9 +112,9 @@ padding:0px;
 
 ._banner_bar{
 width:300px;
-height:180px;
+height:162px;
 position:relative;
-background-image:image-url("ls-bannerBg.jpg");
+background-image:image-url("ls-bannerBg2.jpg");
 background-repeat:no-repeat;
 
 ._facebook_social{
