--- a/assets/stylesheets/pages/_category.scss
+++ b/assets/stylesheets/pages/_category.scss
@@ -16,7 +16,7 @@ padding:0px;
 ._topnav{
 position:relative;
 
-> div{
+> div:first-of-type{
 cursor:pointer;
 font-weight:bold;
 color:#fff;
@@ -29,10 +29,29 @@ text-align:left;
 font-size:24px;
 }
 
+._main_menu_drop{
+background: #000;
+padding-top:5px;
+}
+
 ._icon_category {
 @include toggler_btn_icon3;
 @extend .sprites-white-plus;
 }
+
+
+> a {
+color:#9401d5;
+font-weight:bold;
+}
+
+._icon_subcategory {
+@include toggler_btn_icon2;
+@extend .sprites-white-arrow-right;
+}
+
+}
+
 
 ._ditto{
 font-size:8px;
@@ -46,17 +65,6 @@ position:relative;
 text-align:left;
 text-transform:uppercase;
 font-size:12px;
-> a {
-color:#9401d5;
-font-weight:bold;
-}
-
-._icon_subcategory {
-@include toggler_btn_icon2;
-@extend .sprites-white-arrow-right;
-}
-
-}
 }
 
 ._bottommneu{
@@ -156,10 +164,79 @@ font-size:16px;
 }
 
 ._paging{
-display:none;
+
 clear:both;
+border-top:4px solid #000;
+
+>ul {
+list-style:none;
+margin:0px !important;
+padding:0px;
+> li {
+display: inline;
+height:20px;
+@include background(linear-gradient(#9d02e2, #5a017f)); 
+color:#fff; 
+@include bar_inner_base;
+border-top:2px solid #000;
+> a{
+color:#fff;
+font-size:18px;
+font-weight:bold;
+display:block;
+}
+}
+}
 }
 
+ ._category_title{
+border-bottom: #000;
+border-top: 1px solid #000;
+@include background(linear-gradient(#9d02e2, #5a017f)); 
+color:#fff; 
+@include bar_inner_base;
+margin:0px !important;
+padding:0px;
+> a{
+position:relative;
+@include bar_inner_base;
+}
 
+&[data-ur-toggler-component="button"]{ 
+
+> div{
+text-align:left;
+position:relative;
+@include bar_inner_base; 
+cursor:pointer;
+
+ ._icon_category {
+@include toggler_btn_icon;
+@extend .sprites-white-plus;
+}
+
+}  
+}
+}
+
+._subcategory{
+
+> a{
+font-weight:bold;
+color:#fff;
+border-bottom: #000;
+border-top: 1px solid #000;
+background: #320047;
+@include bar_inner_base;
+position:relative;
+text-align:left;
+
+._icon_subcategory {
+@include toggler_btn_icon2;
+@extend .sprites-white-arrow-right;
+}
+
+}
+}
 
 }
