--- a/assets/stylesheets/pages/_content.scss
+++ b/assets/stylesheets/pages/_content.scss
@@ -227,7 +227,7 @@ height:50px;
 @include bar_inner_base;
 font-size:24px;
 color:#fff;
-margin:5px auto 0;
+margin:25px auto 0;
 padding:10px;
 border:none;
 text-transform:uppercase;
@@ -242,7 +242,7 @@ height:50px;
 @include bar_inner_base;
 font-size:24px;
 color:#fff;
-margin:5px auto 0;
+margin:25px auto 10px;
 padding:10px;
 border:none;
 text-transform:uppercase;
