--- a/assets/stylesheets/sections/_header.scss
+++ b/assets/stylesheets/sections/_header.scss
@@ -133,7 +133,13 @@ position:relative;
 > div {
 display:inline;
 margin-left: 10px;
+width:190px;
 
+.form-item{
+width:190px;
+display:inline !important;
+height:20px;
+}
 
 .form-text{
 width:190px;
@@ -147,6 +153,7 @@ border-color:#000;
 border:none;
 padding-left:5px;
 margin-top:5px;
+display:inline;
 }
 
 }
@@ -154,17 +161,17 @@ margin-top:5px;
 .form-submit{
 color:#fff;
 width:40px;
-height:23px;
+height:22px;
 border-radius: 5px;
 @include background(linear-gradient(#9d02e2, #5a017f));
 font-size:14px;
 text-transform:uppercase;
 margin-left:5px;
-cursor:pointer;
 border:none;
 position:relative;
 display:inline;
 text-align:center;
+z-index:15;
 }
 
 }
