Changes I have made

--- a/assets/stylesheets/main.scss
+++ b/assets/stylesheets/main.scss
@@ -22,4 +22,5 @@
 @import "pages/_category";
 @import "pages/_catalog";
 @import "pages/_content";
+@import "pages/_search";
 @import "pages/_cart";
