--- a/assets/stylesheets/pages/_cart.scss
+++ b/assets/stylesheets/pages/_cart.scss
@@ -75,10 +75,10 @@ text-align:center;
 .form-submit{
 width:95%;
 height:50px;
-@include background(linear-gradient(#f7c935, #d6a105));
+@include background(linear-gradient(#9d02e2, #5a017f));
 @include bar_inner_base;
 font-size:24px;
-color:#666;
+color:#fff;
 margin:5px auto 0;
 padding:5px;
 border:none;
