--- a/assets/stylesheets/sections/_header.scss
+++ b/assets/stylesheets/sections/_header.scss
@@ -166,12 +166,15 @@ border-radius: 5px;
 @include background(linear-gradient(#9d02e2, #5a017f));
 font-size:14px;
 text-transform:uppercase;
-margin-left:5px;
+margin-left: 5px  0 0 5px;
 border:none;
 position:relative;
 display:inline;
 text-align:center;
 z-index:15;
+cursor:pointer;
+padding:0px !important;
+top:1px;
 }
 
 }
