Changes I have made alot

--- a/assets/stylesheets/pages/_search.scss
+++ b/assets/stylesheets/pages/_search.scss
@@ -130,6 +130,7 @@ text-align:left;
 background:#fff;
 text-align:center;
 margin: 5px 0px;
+border:#000 2px solid;
 }
 
 .search-info{
@@ -152,6 +153,8 @@ float:left;
 margin-right: 20px;
 width:105px;
 height:140px;
+padding:20px 0;
+
 }
 
 }
